// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRecord EnrollmentFundng ChangeFunding matches snapshot - change funding 1`] = `
<DocumentFragment>
  <div
    class="oec-card oec-card--stacked"
  >
    <div
      class="oec-card-cell"
    >
      <h3>
        Change funding
      </h3>
      <form
        class="usa-form usa-form"
        id="change-funding-form"
      >
        <fieldset
          aria-labelledby="fieldset-legend-funding-source-1"
          class="usa-fieldset"
          id="funding-source-1"
        >
          <legend
            id="fieldset-legend-funding-source-1"
          >
            <span
              class="usa-label"
            >
              Funding source options
            </span>
          </legend>
          <div />
        </fieldset>
        <fieldset
          aria-labelledby="fieldset-legend-funding-end-date funding-end-date-hint"
          class="usa-fieldset"
          id="funding-end-date"
        >
          <legend
            id="fieldset-legend-funding-end-date"
          >
            <span
              class="usa-label"
            >
              Funding end date
            </span>
          </legend>
          <span
            class="usa-hint text-italic"
            id="funding-end-date-hint"
          >
            For example: 06/21/2008
          </span>
          <div>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
                id="funding-end-date-picker"
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label bx--visually-hidden"
                    for="funding-end-date-input"
                  >
                    Date picker
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      class="bx--date-picker__input flatpickr-input"
                      id="funding-end-date-input"
                      pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                      placeholder="mm/dd/yyyy"
                      type="text"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          class="display-flex flex-align-center"
        >
          <button
            class="usa-button usa-button--outline bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <div
            class="margin-top-1"
          >
            <button
              class="usa-button bx--btn bx--btn--primary"
              tabindex="0"
              type="submit"
            >
              Change current funding
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class=""
    />
  </div>
  <div
    class="oec-card oec-card--stacked"
  >
    <div
      class="oec-card-cell"
    >
      <div
        class="display-flex flex-column flex-align-end"
      >
        <div>
          <button
            class="usa-button usa-button--unstyled margin-right-4 bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            End current funding
          </button>
          <button
            class="usa-button usa-button--unstyled bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Change funding
          </button>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;

exports[`EditRecord EnrollmentFundng ChangeFunding matches snapshot - end funding 1`] = `
<DocumentFragment>
  <div
    class="oec-card oec-card--stacked"
  >
    <div
      class="oec-card-cell"
    >
      <h3>
        End current funding
      </h3>
      <form
        class="usa-form usa-form"
        id="change-funding-form"
      >
        <fieldset
          aria-labelledby="fieldset-legend-funding-end-date funding-end-date-hint"
          class="usa-fieldset"
          id="funding-end-date"
        >
          <legend
            id="fieldset-legend-funding-end-date"
          >
            <span
              class="usa-label"
            >
              Funding end date
            </span>
          </legend>
          <span
            class="usa-hint text-italic"
            id="funding-end-date-hint"
          >
            For example: 06/21/2008
          </span>
          <div>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--date-picker bx--date-picker--single"
                id="funding-end-date-picker"
              >
                <div
                  class="bx--date-picker-container"
                >
                  <label
                    class="bx--label bx--visually-hidden"
                    for="funding-end-date-input"
                  >
                    Date picker
                  </label>
                  <div
                    class="bx--date-picker-input__wrapper"
                  >
                    <input
                      class="bx--date-picker__input flatpickr-input"
                      id="funding-end-date-input"
                      pattern="\\\\d{1,2}\\\\/\\\\d{1,2}\\\\/\\\\d{4}"
                      placeholder="mm/dd/yyyy"
                      type="text"
                      value=""
                    />
                    <svg
                      aria-hidden="true"
                      class="bx--date-picker__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20	V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <div
          class="display-flex flex-align-center"
        >
          <button
            class="usa-button usa-button--outline bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <div
            class="margin-top-1"
          >
            <button
              class="usa-button bx--btn bx--btn--primary"
              tabindex="0"
              type="submit"
            >
              End current funding
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class=""
    />
  </div>
  <div
    class="oec-card oec-card--stacked"
  >
    <div
      class="oec-card-cell"
    >
      <div
        class="display-flex flex-column flex-align-end"
      >
        <div>
          <button
            class="usa-button usa-button--unstyled margin-right-4 bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            End current funding
          </button>
          <button
            class="usa-button usa-button--unstyled bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Change funding
          </button>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;

exports[`EditRecord EnrollmentFundng ChangeFunding matches snapshot - without funding 1`] = `
<DocumentFragment>
  <div
    class="oec-card oec-card--stacked"
  >
    <div
      class="oec-card-cell"
    >
      <h3>
        Change funding
      </h3>
      <form
        class="usa-form usa-form"
        id="change-funding-form"
      >
        <fieldset
          aria-labelledby="fieldset-legend-funding-source-1"
          class="usa-fieldset"
          id="funding-source-1"
        >
          <legend
            id="fieldset-legend-funding-source-1"
          >
            <span
              class="usa-label"
            >
              Funding source options
            </span>
          </legend>
          <div />
        </fieldset>
        <div
          class="display-flex flex-align-center"
        >
          <button
            class="usa-button usa-button--outline bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <div
            class="margin-top-1"
          >
            <button
              class="usa-button bx--btn bx--btn--primary"
              tabindex="0"
              type="submit"
            >
              Change current funding
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      class=""
    />
  </div>
  <div
    class="oec-card oec-card--stacked"
  >
    <div
      class="oec-card-cell"
    >
      <div
        class="display-flex flex-column flex-align-end"
      >
        <div>
          <button
            class="usa-button usa-button--unstyled bx--btn bx--btn--primary"
            tabindex="0"
            type="button"
          >
            Start new funding
          </button>
        </div>
      </div>
    </div>
    <div
      class=""
    />
  </div>
</DocumentFragment>
`;
